[gd_scene load_steps=5 format=3 uid="uid://bjimy57b5y01b"]

[ext_resource type="Script" path="res://space_bodies/planets/Planet.gd" id="1_33fkl"]
[ext_resource type="Theme" uid="uid://h480sux0ug1" path="res://menus/Theme.tres" id="2_jdwli"]
[ext_resource type="Texture2D" uid="uid://d31skqn80qeyp" path="res://assets/art/ui/shield_icon.png" id="2_l7nul"]
[ext_resource type="Texture2D" uid="uid://dxp6t6dsbnfpr" path="res://assets/art/ui/fuel_icon.png" id="3_32iwd"]

[node name="Planet" type="StaticBody2D"]
script = ExtResource("1_33fkl")

[node name="Planet" type="AnimatedSprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -23.5
offset_right = 48.5
offset_bottom = 23.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_jdwli")

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShieldButton" type="Button" parent="UI/PanelContainer/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
icon = ExtResource("2_l7nul")
icon_alignment = 1
expand_icon = true

[node name="PanelContainer2" type="PanelContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FuelButton" type="Button" parent="UI/PanelContainer/MarginContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
icon = ExtResource("3_32iwd")
icon_alignment = 1
expand_icon = true
